--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: shell
-          image: alpine:3.18
+          image: bitnami/kubectl:latest
           command:
             - sh
             - -c
