--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: shell
-          image: bitnami/kubectl:latest
+          image: lachlanevenson/k8s-kubectl:v1.28.0
           command:
             - sh
             - -c
