--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: shell
-          image: alpine
+          image: bitnami/kubectl:latest
           command:
             - sh
             - -c
