--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: shell
-          image: bitnami/kubectl:latest
+          image: alpine:3.19
           command:
             - sh
             - -c
